force-app/main/default/objects/Account/fields/Not_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Not_Qualified__c</fullName>
    <label>Not Qualified</label>
    <summaryFilterItems>
        <field>Opportunity.Quality__c</field>
        <operation>equals</operation>
        <value>Poor quality</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>