force-app/main/default/objects/Account/fields/sampleTextFormula__c.field-meta.xml
<CustomField>
    <fullName>sampleTextFormula__c</fullName>
    <formula>TEXT(TODAY() - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sampleTextFormula</label>
    <type>Text</type>
</CustomField>