force-app/main/default/objects/Account/fields/someFormulaField__c.field-meta.xml
<CustomField>
    <fullName>someFormulaField__c</fullName>
    <formula>TEXT(Industry) + &apos; &apos; + TEXT(Rating)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>someFormulaField</label>
    <type>Text</type>
</CustomField>